theme not fitting window issue

--- a/wp-content/themes/twentyfourteen/style.css
+++ b/wp-content/themes/twentyfourteen/style.css
@@ -819,7 +819,8 @@ span + .edit-link:before,
 
 .site {
 	background-color: #fff;
-	max-width: 1260px;
+	/*max-width: 1260px;*/
+	max-width: 1350px;
 	position: relative;
 }
 
@@ -846,7 +847,8 @@ span + .edit-link:before,
 
 .site-header {
 	background-color: #000;
-	max-width: 1260px;
+	/*max-width: 1260px;*/
+	max-width: 1350px;
 	position: relative;
 	width: 100%;
 	z-index: 4;
